--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "stacktrace-js": "^2.0.2"
+    "stacktrace-js": "^2.0.2",
+    "tree": "^0.1.3"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
