--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
     "log4js": "^6.3.0",
     "moment": "^2.27.0",
+    "mongodb-uri": "^0.9.7",
+    "mongoose": "^5.10.5",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,6 +45,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
