create redis connect by ioredis

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-host=''
-port=
-dbName=''
-user=''
-pwd=''
-authSource='admin'
+# mongo conf
+mongo.host=''
+mongo.port=
+mongo.dbName=''
+mongo.user=''
+mongo.pwd=''
+mongo.authSource=''
+mongo.poolSize=20
+# reids conf
+redis.host=''
+redis.port=
+redis.pwd=''
+redis.db=0
