--- a/package.json
+++ b/package.json
@@ -25,18 +25,23 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
+    "@nestjs/microservices": "^7.4.4",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
+    "ioredis": "^4.17.3",
     "log4js": "^6.3.0",
     "moment": "^2.27.0",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^5.10.5",
+    "nestjs-redis": "^1.2.8",
     "passport-jwt": "^4.0.0",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "stacktrace-js": "^2.0.2",
-    "tree": "^0.1.3"
+    "tree": "^0.1.3",
+    "treer": "^1.0.4"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
