redis listen key expired  event

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ mongo.port=
 mongo.dbName=''
 mongo.user=''
 mongo.pwd=''
-mongo.authSource=''
+mongo.authSource='admin'
 mongo.poolSize=20
 # reids conf
 redis.host=''
